--- a/src/css/cosplay-maker.css
+++ b/src/css/cosplay-maker.css
@@ -18,6 +18,7 @@
    flex-direction: column;
    align-items: center;
    margin-top: 2em;
+   max-width: 80%;
 }
 
 .card-container {
@@ -108,6 +109,9 @@
 .mui-icon {
    max-width: 115px;
    background-color: white;
+}
+.embed-pdf-spotifake {
+   margin: 2em;
 }
 @media screen and (max-width: 1370px) {
    .card-container {
