--- a/src/css/my-tools.css
+++ b/src/css/my-tools.css
@@ -7,7 +7,15 @@
 .list-item-image {
     margin-left: 20px
 }
-
+.tool-description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.img-tool-desc {
+    width: 250px;
+    margin-top: 1em;
+}
 @media screen and (max-width: 768px) {
     .container-list {
         min-width: 0;
