--- a/src/css/studies-page.css
+++ b/src/css/studies-page.css
@@ -10,7 +10,8 @@
    margin-right: 20em;
 }
 .study-tag-date {
-    margin: O;
+    margin-top: 1px;
+    margin-bottom: 1px !important;
 }
 @media screen and (max-width: 768px) {
     .studies-timeline {
