--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -59,6 +59,11 @@
     margin-top: 0;
     margin-Bottom: 1em;
 }
+@media screen and (max-width: 1024px) {
+    .informations-container {
+        font-size: 14px;
+    }
+}
 @media screen and (max-width: 768px) {
     .footer-title {
         display: none;
