--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.root {
+  height: 40rem;
+  background-color: #a3f7c8;
+   background-image: url('./../../public/wave_w2881xh801_98aaf3a37b4d733bdb3bc7754c25ad3608c520c5ebb9b1079f2d0c2f78b07ab8.png'); 
+   background-position: bottom;
+   background-repeat: no-repeat;
+}
