--- a/src/css/presentation-page.css
+++ b/src/css/presentation-page.css
@@ -1,19 +1,36 @@
 .presentation-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    color: white;
     margin-bottom: 2em;
+}
+.card-presentation {
+    border-radius: 16px ;
+    padding: 24px;
+    box-shadow: 0 20px 40px rgba(57, 76, 96, 0.50);
+    max-height: 548px;
+    min-height: 548px;
+    min-width: 400px ;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    margin: 24px 48px 0 0;
+    background-color: white;
+    position: absolute;
 }
 .avatar-icon {
     border-radius: 50%;
-    height: 200px;
+    height: 250px;
+    margin-bottom: 70px;
+    border: 8px solid #a3a9f7;
 }
 .paragraph-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     max-width: 800px;
+    margin-left: 8%;
+    margin-top: 25rem;
 }
 
 div div p {
