--- a/src/css/presentation-page.css
+++ b/src/css/presentation-page.css
@@ -1,40 +1,55 @@
+@keyframes FadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.title-presentation {
+    color: white;
+    margin-bottom: 3rem;
+        
+}
+
 .presentation-container {
+    animation: FadeIn 1s ease-in-out;
     display: flex;
     flex-direction: column;
-    margin-bottom: 2em;
+    align-items: center;
 }
 .card-presentation {
+    animation: FadeIn 1s ease-in-out;
     border-radius: 16px ;
     padding: 24px;
     box-shadow: 0 20px 40px rgba(57, 76, 96, 0.50);
-    max-height: 548px;
+    max-height: 600px;
     min-height: 548px;
     min-width: 400px ;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin: 24px 48px 0 0;
+    margin: -104px 48px 0 0;
     background-color: white;
-    position: absolute;
+    position: sticky;
 }
 .avatar-icon {
     border-radius: 50%;
     height: 250px;
-    margin-bottom: 70px;
-    border: 8px solid #a3a9f7;
+    border: 8px solid #008F8C;
 }
 .paragraph-container {
     display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    margin-top: 10rem;
+}
+.card-details {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 800px;
-    margin-left: 8%;
-    margin-top: 25rem;
-}
-
-div div p {
-    line-height: 1.5em;
 }
 
 @media screen and (max-width: 768px) {
