--- a/src/css/presentation-page.css
+++ b/src/css/presentation-page.css
@@ -6,6 +6,11 @@
     opacity: 1;
   }
 }
+.presentation-page {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: 7rem;
+}
 
 .title-presentation {
     color: white;
@@ -58,6 +63,24 @@
     }
     .paragraph-container {
         max-width: 350px;
+    }
+    .card-presentation {
+        min-width: 200px;
+        margin: 0;
+        min-height: 200px;
+        max-width: fit-content;
+    }
+    .presentation-container {
+        margin: 0 2rem;
+    }
+    .title-presentation{
+        color: black;
+    }
+    .presentation-page {
+        display: flex;
+        flex-direction:column-reverse;
+        align-items: center;
+        margin-top: 2rem;
     }
 }
     
