--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,7 +14,7 @@ code {
 .root {
   height: 30rem;
   background-color: #008F8C;
-   background-image: url('./../../public/wave_w2881xh801_98aaf3a37b4d733bdb3bc7754c25ad3608c520c5ebb9b1079f2d0c2f78b07ab8.png'); 
+   background-image: url('./../../public/wave.png'); 
    background-position: bottom;
    background-repeat: no-repeat;
 }
